[package]
name = "raytracer"
version = "0.1.0"
authors = ["Kevin Talmadge <kevin.i.talmadge@gmail.com>"]

[lib]
name = "raytracer"
path = "./lib.rs"
crate-type = ["cdylib"]

[dependencies]
cgmath = "0.15"
rand = "0.3"
image = "0.16"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
wasm-bindgen = "0.2.13"

[profile.release]
debug = false

